gitops/environments/dev/services.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: seniors-journey-frontend
spec:
  ports:
    - name: http
      port: 80
      targetPort: oauth-proxy
  selector:
    app.kubernetes.io/name: seniors-journey-frontend
